--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -15,13 +15,13 @@
     <!-- Buttons -->
     <div class="form-group">
     	<div class="col-sm-10">
-        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly">Submit</button>
-            <button class="btn btn-danger" ng-click="close()">Cancel</button>
+        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly" translate="Common.Submit">Submit</button>
+            <button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
         </div>
     </div>
 
     <ul class="nav nav-tabs">
-        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true">Header</a></li>
+        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true" translate="Finance.DocumentHeader">Header</a></li>
         <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false">Items</a></li>
     </ul>
 
@@ -70,7 +70,7 @@
 
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.Date">Date</label>
-                <div class="col-sm-10">
+                <div class="input-group">
                     <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
@@ -90,7 +90,8 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocDesp" translate="Common.Description">Desp</label>
                 <div class="col-sm-10">
-                    <textarea id="iptDocDesp" rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentObject.Desp"></textarea>
+                    <input type="text" id="iptDocDesp" class="form-control" 
+                            ng-readonly="isReadonly" ng-model="DocumentObject.Desp">
                 </div>
             </div>
         </form>
@@ -197,8 +198,8 @@
                 <div class="form-group">
                 	<div class="col-sm-10">
                     	<button class="btn btn-default btn-primary" ng-click="saveCurrentItem()" ng-hide="isReadonly"
-                        		ng-disabled="frmItem.$invalid || !frmItem.$dirty">Save Item</button>
-                        <button class="btn btn-danger" ng-click="cancelCurrentItem()">Cancel Item Editing</button>
+                        		ng-disabled="frmItem.$invalid || !frmItem.$dirty" translate="Finance.SaveCurrentItem">Save Item</button>
+                        <button class="btn btn-danger" ng-click="cancelCurrentItem()" translate="Finance.CancelItemEditing">Cancel Item Editing</button>
                     </div>
                 </div>
             </form>
