--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -17,163 +17,170 @@
         <div class="form-group">
             <label class="control-label col-sm-2" translate="Common.Date">Date</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
-                        datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                </span>
-            </div>
-        </div>        
-        
-		<div class="form-group">
-			<label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="SourceAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                	<ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="allacnt in AllAccounts">
-                        <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{allacnt.ID}} <br />
-                            Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-             </div>
-		</div>
-
-		<div class="form-group">
-			<label class="control-label col-sm-2" translate="Finance.TargetAccount">Tgt Account:</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="TargetAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                	<ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="allacnt in AllAccounts">
-                        <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{allacnt.ID}} <br />
-                            Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-             </div>
-		</div>
-
-        <div class="form-group">
-            <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="acur in AllCurrencies">
-                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{acur.Currency}} <br />
-                            Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="acur in AllCurrencies">
-                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{acur.Currency}} <br />
-                            Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="iptAmt" translate="Finance.Amount">Amount:</label>
-            <div class="col-sm-10">
-                <input type="text" id="iptAmt" ng-readonly="isReadonly" ng-model="TranAmount" required></input>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="iptAmt" translate="Finance.Amount">Amount:</label>
-            <div class="col-sm-10">
-                <input type="text" id="iptAmt" ng-readonly="isReadonly" ng-model="TranAmount" required></input>
+                <div class="input-group">
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
+                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                    </span>
+                </div>
             </div>
         </div>
         
-        <div class="form-group">
-            <label class="control-label col-sm-2" translate="Finance.SourceControlCenter">Source Control Center </label>
-            <div class="col-sm-10">
-                <ui-select ng-model="SourceControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="scc in AllControlCenters">
-                        <div ng-bind-html="scc.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{scc.ID}} <br />
-                            Name: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-sm-2" translate="Finance.SourceOrder">Source Order:</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="SourceOrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="sord in AllOrders">
-                        <div ng-bind-html="sord.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{sord.ID}} <br />
-                            Name: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-sm-2" translate="Finance.TargetControlCenter">Target Control Center</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="TargetControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="cc in AllControlCenters">
-                        <div ng-bind-html="cc.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{cc.ID}} <br />
-                            Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-sm-2" translate="Finance.TargetOrder">Target Order:</label>
-            <div class="col-sm-10">
-                <ui-select ng-model="TargetOrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="ord in AllOrders">
-                        <div ng-bind-html="ord.Name | highlight: $select.search"></div>
-                        <small>
-                            ID: {{ord.ID}} <br />
-                            Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
-		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptDesp" translate="Common.Description">Description</label>
 			<div class="col-sm-10">
-				<textarea rows="5" ng-readonly="isReadonly" id="iptDesp" required
-						ng-model="DocumentObject.Desp"></textarea>
+				<input type="text" ng-readonly="isReadonly" id="iptDesp" required class="form-control"
+						ng-model="DocumentObject.Desp"></input>
 			</div>
 		</div>
+        
+        <!-- Source part -->
+        <div class="col-lg-6">
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="SourceAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="allacnt in AllAccounts">
+                            <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{allacnt.ID}} <br />
+                                Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="acur in AllCurrencies">
+                            <div ng-bind-html="acur.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{acur.Currency}} <br />
+                                Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptSAmt" translate="Finance.Amount">Source Amount:</label>
+                <div class="col-sm-10">
+                    <input type="text" id="iptSAmt" class="form-control" ng-readonly="isReadonly" ng-model="SourceTranAmount" required></input>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.SourceControlCenter">Source Control Center </label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="SourceControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="scc in AllControlCenters">
+                            <div ng-bind-html="scc.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{scc.ID}} <br />
+                                Name: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+    
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.SourceOrder">Source Order:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="SourceOrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="sord in AllOrders">
+                            <div ng-bind-html="sord.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{sord.ID}} <br />
+                                Name: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Target part -->
+        <div class="col-lg-6">
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.TargetAccount">Tgt Account:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="TargetAccountObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select an account via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="allacnt in AllAccounts">
+                            <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{allacnt.ID}} <br />
+                                Name: <span ng-bind-html="+allacnt.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="acur in AllCurrencies">
+                            <div ng-bind-html="acur.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{acur.Currency}} <br />
+                                Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="iptTAmt" translate="Finance.TargetAmount">Amount:</label>
+                <div class="col-sm-10">
+                    <input type="text" id="iptTAmt" class="form-control" ng-readonly="isReadonly" ng-model="TargetTranAmount" required></input>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.TargetControlCenter">Target Control Center</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="TargetControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a type via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="cc in AllControlCenters">
+                            <div ng-bind-html="cc.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{cc.ID}} <br />
+                                Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+    
+            <div class="form-group">
+                <label class="control-label col-sm-2" translate="Finance.TargetOrder">Target Order:</label>
+                <div class="col-sm-10">
+                    <ui-select ng-model="TargetOrderObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select an order via the name...">{{$select.selected.Name}}</ui-select-match>
+                        <ui-select-choices repeat="ord in AllOrders">
+                            <div ng-bind-html="ord.Name | highlight: $select.search"></div>
+                            <small>
+                                ID: {{ord.ID}} <br />
+                                Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+        </div>
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
