--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -47,7 +47,7 @@
 
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
-                <div class="col-sm-10">
+                <div class="input-group">
                     <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isValidfromDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
@@ -58,7 +58,7 @@
             
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
-                <div class="col-sm-10">
+                <div class="input-group">
                     <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isValidtoDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
